<resources>
    <string name="app_name">Habibul Quran</string>
    <string name="makhraj">Hijaiyah</string>
    <string name="tadarus">Tadarus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_quran">Quran</string>
    <string name="title_profile">Profile</string>
    <string name="login_btn">Login</string>
    <string name="login">\u0020 Login</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="new_to_app">Belum punya akun?</string>
    <string name="register">\u0020 Daftar</string>
    <string name="register_btn">Daftar</string>
    <string name="forgot">Lupa password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="username">Username</string>
    <string name="already">Sudah punya akun?</string>

    <string name="title_menu_1">Guru Mengaji Virtual Anda</string>
    <string name="title_menu_2">Belajar Fleksibel</string>
    <string name="title_menu_3">Satu Al-Quran Di Dalam Genggaman Anda</string>
    <string name="desc_menu_1">Dengan teknologi AI, belajar Al-Quran menjadi lebih mudah.</string>
    <string name="desc_menu_2">Belajar kapan saja, dimana pun anda mau.</string>
    <string name="desc_menu_3">Tilawah, murojaah dan murrotal di dalam satu aplikasi.</string>
    <string name="on_boarding">On Boarding</string>
    <string name="start">Mulai</string>

    <string name="press_again">Tekan dua kali untuk keluar</string>
    <string name="makhraj_progress">Hijaiyah Progress</string>
    <string name="tadarus_progress">Tadarus Progress</string>
    <string name="tes_makhraj">Tes Hijaiyah</string>
    <string name="tes_tadarus">Tes Tadarus</string>
    <string name="tilawah">Tilawah</string>
    <string name="tilawah_progress">Tilawah Progress</string>
    <string name="sholat">Ashar</string>
    <string name="waktu_sholat">16:00</string>
    <string name="pray_time_countdown">-2:01:00</string>
    <string name="welcome_user">Ahlan, User</string>
    <string name="tes_makhraj_huruf">Tes Hijaiyah</string>
    <string name="hijaiyah_dummy">ف</string>
    <string name="show_more">Lihat semua</string>
    <string name="yuk_belajar_hijaiyah">Yuk belajar pengucapan huruf hijaiyah</string>
    <string name="dummy_total_ayat">Total ayat: 8</string>
    <string name="total_ayat">Total ayat: %d</string>
    <string name="surah">Surah</string>
    <string name="tes_tadarus_per_ayat">Tes Tadarus</string>
    <string name="cek_bacaan_al_qur_an_kamu">Cek bacaan Al-Qur\'an kamu</string>
    <string name="belajar_makhraj">Belajar Hijaiyah</string>
    <string name="makhraj_progress_dummy">0/28</string>
    <string name="pronounce_dummy">fa</string>
    <string name="microphone">Microphone</string>
    <string name="play_hijaiyah_letter">Play hijaiyah letter</string>
    <string name="press_mic">Tekan mikrofon dan ucapkan huruf diatas</string>
    <string name="press_mic_ayat">Tekan mikrofon dan ucapkan ayat diatas</string>

    <string name="email_reset_send">Link verifikasi telah dikirimkan. Silahkan cek email anda.</string>
    <string name="email_dummy">user@mail.com</string>
    <string name="username_dummy">User</string>
    <string name="title_birth_date">Tanggal lahir</string>
    <string name="title_gender">Jenis kelamin</string>
    <string name="gender_male">Laki-laki</string>
    <string name="birthdate_dummy">8 Januari 2002</string>
    <string name="name">Nama</string>
    <string name="personal_data">Data Pribadi</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="gender_female">Perempuan</string>
    <string name="number_ayat_dummy">25</string>
    <string name="dummy_ayat">اَلَمْ تَرَ كَيْفَ فَعَلَ رَبُّكَ بِاَصْحٰبِ الْفِيْلِۗ</string>
    <string name="dummy_ayat_latin">Alam tara kaifa fa‘ala rabbuka bi\'aṣḥābil-fīl(i).</string>
    <string name="dummy_arti">(Pembuka)</string>
    <string name="dummy_ayat_surah">· 7 Ayat</string>
    <string name="ayat_surah">· %d Ayat</string>
    <string name="tes_pelafalan">Tes pelafalan per ayat dengan teknologi Artificial Intelligence.</string>
    <string name="profile_pict">Foto Profil</string>
    <string name="choose_photo">Pilih foto</string>
    <string name="date_picker">Date picker</string>
    <string name="birthdate">Tanggal Lahir</string>
    <string name="masukkan_tanggal_lahir">Masukkan tanggal lahir</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="choose_ayat">Pilih ayat</string>
    <string name="retry">Ulangi</string>
    <string name="continu">Lanjutkan</string>
    <string name="retry_caps">ULANGI</string>
    <string name="success_msg">Pelafalan kamu sudah baik dan benar. Yuk, lanjut belajar tahap selanjutnya!</string>
    <string name="incorrect_msg">Pelafalan kamu masih perlu diperbaiki. Silahkan ulangi lagi ya!</string>
    <string name="not_good">Belum Sempurna</string>
    <string name="very_good">Sangat Baik</string>
    <string name="one_rating_title">Belum Sempurna</string>
    <string name="one_rating_desc">Bacaan kamu masih perlu banyak perbaikan. Silahkan ulangi lagi ya.</string>
    <string name="two_star_title">Kurang Sempurna</string>
    <string name="two_star_desc">Pelafalan kamu perlu sedikit diperbaiki. Silahkan ulangi dulu ya.</string>
    <string name="three_star_title">Baik</string>
    <string name="three_star_desc">Pelafalan kamu sudah baik namun masih bisa lebih baik lagi. Tetap semangat!</string>
    <string name="four_star_title">Sangat baik!</string>
    <string name="four_star_desc">Pelafalan kamu sudah sangat baik. Yuk belajar tahap selanjutnya!</string>
    <string name="five_star_title">Sempurna!</string>
    <string name="five_star_desc">Selamat! pelafalan kamu sudah sempurna. Yuk coba tahap selanjutnya!</string>

    <string name="press_to_stop">Tekan tombol untuk berhenti merekam</string>
    <string name="select_photo">Select photo</string>
    <string name="pls_fill_auth">Silahkan isi kolom untuk melanjutkan</string>
    <string name="pass_not_valid">Kata sandi harus memiliki setidaknya 8 karakter</string>
    <string name="email_format_wrong">Format email salah</string>
    <string name="pp_not_valid">Foto profil tidak boleh kosong</string>
    <string name="email_is_taken">Email sudah dipakai</string>
    <string name="register_success">Registrasi berhasil. Silahkan cek email anda untuk verifikasi sebelum login.</string>
    <string name="email_not_registered">Email belum terdaftar</string>
    <string name="auth_not_matched">Email dan password tidak sesuai</string>
    <string name="login_success">Login berhasil. Selamat datang, </string>

    <string name="session_end">Sesi anda berakhir, silahkan login ulang</string>
    <string name="log_out">Keluar</string>
    <string name="logout_ask">Apakah anda yakin ingin keluar? </string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="send_reset_link">Kirim link reset</string>
    <string name="reset_instruction">Silahkan masukkan email yang digunakan pada akun anda untuk melakukan reset password</string>
    <string name="send_link_verif">Kirim Link Verifikasi</string>
    <string name="verif_instruction">Silahkan masukkan email terdaftar untuk mendapatkan link verifikasi</string>

    <string name="verification">Verifikasi Email</string>
    <string name="verification_sent">Link verifikasi berhasil terkirim. Silahkan cek email anda.</string>
    <string name="select_date">Pilih tanggal</string>

    <string name="success_edit">Berhasil mengedit profil</string>
</resources>