<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/very_good"
        android:textColor="@color/purple_main"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/not_good"
        android:textColor="@color/purple_main"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationViewCorrect"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tv_correct"
        app:layout_constraintStart_toStartOf="@+id/tv_correct"
        app:layout_constraintTop_toBottomOf="@+id/tv_correct"
        tools:visibility="visible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/success" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationViewIncorrect"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_correct"
        app:layout_constraintStart_toStartOf="@+id/tv_correct"
        app:layout_constraintTop_toBottomOf="@+id/tv_correct"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="invisible"
        app:lottie_rawRes="@raw/failed" />

    <TextView
        android:id="@+id/tv_desc_correct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        android:text="@string/success_msg"
        android:textAlignment="center"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationViewCorrect" />
    <TextView
        android:id="@+id/tv_desc_incorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/incorrect_msg"
        android:visibility="invisible"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationViewCorrect" />


    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/purple_main"
        android:visibility="invisible"
        android:text="@string/continu"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_correct" />

    <Button
        android:id="@+id/btn_incorrect_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/purple_main"
        android:text="@string/retry"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_correct" />


    <TextView
        android:id="@+id/tv_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        tools:visibility="visible"
        android:visibility="gone"
        android:text="@string/retry_caps"
        android:textColor="@color/purple_main"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>