<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.makhraj.detail.DetailMakhrajActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:layout_marginTop="32dp"
            android:elevation="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_hijaiyah_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/hijaiyah_dummy"
                    android:textSize="100sp" />

                <TextView
                    android:id="@+id/tv_pronounce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pronounce_dummy"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/btn_play_makhraj"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_circle"
                    android:src="@drawable/ic_play_arrow_24"
                    app:tint="@color/white"
                    android:contentDescription="@string/play_hijaiyah_letter" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/btn_record_makhraj"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/button_circle_2"
            android:src="@drawable/ic_mic_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:tint="@color/white"
            android:contentDescription="@string/microphone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/press_mic"
            app:layout_constraintEnd_toEndOf="@id/btn_record_makhraj"
            app:layout_constraintStart_toStartOf="@+id/btn_record_makhraj"
            app:layout_constraintTop_toBottomOf="@+id/btn_record_makhraj" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
